on, notably like this:

  unbundle no datatype_record_syntax


*** Isabelle/jEdit Prover IDE ***

* Action isabelle.select_structure (with keyboard shortcut C+7) extends
the editor selection by adding the enclosing formal structure, based on
formal markup by the prover. Repeated invocation of this action extends
the selection incrementally.

* Update to jEdit 5.7.0, the latest release.


*** Isabelle/VSCode Prover IDE ***

* General improvements: Persistent decorations for PIDE markup, correct
font and formatting in panels, and proper completions. Moreover, the
PIDE extension of the LSP now features additional protocol messages
(e.g. to obtain the set of Isabelle symbols) and more fine-grained
control for recoding of Unicode symbols.

* Active "sendback" markup can now be used via LSP code actions, e.g. to
insert proof methods from Sledgehammer output.

* Relevant Isabelle options can now be overriden from the
Isabelle/VSCode extension settings.


*** HOL ***

* Sledgehammer:
  - Added instantiations of facts using the "of" attribute
    (e.g. "assms(1)[of x]"), which can be activated using the
    Sledgehammer option "suggest_of" (default: smart, i.e. only if
    preplaying failed).  This uses Metis internally to infer the
    variable instantiations (see below).
  - Added extensionality (fact "ext") to some "metis (lifting)" calls.
  - Use pretty-printing to format suggested one-line proofs.

* Metis:
  - Added inference of variable instantiations, which can be activated
    using the configuration option "metis_suggest_of" (default: false).
    This outputs a suggestion with instantiations of the facts using the
    "of" attribute (e.g. "assms(1)[of x]").

* Theory "HOL.Wellfounded":
  - Removed lemma wellorder.wfP_less. Use wellorder.wfp_on_less instead.
    Minor INCOMPATIBILITY.
  - Renamed lemmas. Minor INCOMPATIBILITY.
      accp_wfPD ~> accp_wfpD
      accp_wfPI ~> accp_wfpI
      wfPUNIVI ~> wfpUNIVI
      wfP_SUP ~> wfp_SUP